schinese localization update
Localization of new update and minor fixes to old ones

--- a/localization/zhs/AigisMod-Character-Strings.json
+++ b/localization/zhs/AigisMod-Character-Strings.json
@@ -16,9 +16,9 @@
       "皇帝"
     ],
     "TEXT": [
-      "白之皇帝率领一支探索队。 NL 探索隐藏在高塔中的神秘力量。",
+      "白之皇帝率领一支探索队 NL 探索隐藏在高塔中的神秘力量。",
       "你与战友们一同攻击心脏。",
-      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们.~ ~战士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~战士。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   },
   "aigisMod:TheAvengerCharacter": {
@@ -28,8 +28,8 @@
     ],
     "TEXT": [
       "文森特没能救下自己的家人，为了赎罪而开始了自己的旅程。 NL 现在他将会探索高塔，但并非孤身一人。",
-      "你准备好了最后一张王牌对抗心脏.",
-      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们.~ ~猎人。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
+      "你准备好了最后一张王牌对抗心脏",
+      "在一条昏暗的街上，你遇见几个戴着兜帽的人在进行某种黑暗的仪式。当你靠近时，他们全都同时转身面对你，让你觉得十分诡异。 其中个子最高的一个微微一笑，露出了长长的尖牙，向你伸出了一只苍白而瘦长的手： NL ~\"加入~ ~我们~ ~猎人。~ ~一起~ ~感受~ ~高塔~ ~的~ ~温暖~ ~吧。\"~"
     ]
   }
 }
