--- a/localization/zhs/AigisMod-Monster-Strings.json
+++ b/localization/zhs/AigisMod-Monster-Strings.json
@@ -1,18 +1,18 @@
 {
   "aigisMod:BattleTank": {
-    "NAME": "强袭坦克",
+    "NAME": "战斗坦克",
     "MOVES": [
-      "溅射攻击.",
-      "穿刺攻击.",
-      "回合结束时, 对任意敌人造成 #b", " 点 刀光剑影 伤害 .",
-      "回合结束时, 对任意敌人造成 #b", " 点 直击灵魂 伤害."
+      "扩散弹攻击。",
+      "贯穿弹攻击。",
+      "回合结束时，对随机一名敌人造成 #b", " 点溅射伤害。",
+      "回合结束时，对随机一名敌人造成 #b", " 点真实伤害。"
     ]
   },
   "aigisMod:EnergyAthanor": {
-    "NAME": "能源熔炉",
+    "NAME": "活力炼金炉",
     "MOVES": [
-      "产生能量.",
-      "回合开始, 获得 #b", " 点 [E] ."
+      "活力圣灵药。",
+      "回合开始时获得 #b", "  [E] ."
     ]
   },
   "aigisMod:Solais": {
@@ -51,14 +51,14 @@
     "MOVES": [
       "光之剑复制品",
       "七要塞",
-      "神剑 Gea Curruid"
+      "神剑Gea Curruid"
     ],
     "DIALOG": [
       ""
     ]
   },
   "aigisMod:Tuan": {
-    "NAME": "托拉姆",
+    "NAME": "图安",
     "MOVES": [
       "极为迅疾的蹂躏咆哮",
       "蛮勇不落的粉碎者"
@@ -68,7 +68,7 @@
     ]
   },
   "aigisMod:Tram": {
-    "NAME": "图姆",
+    "NAME": "托拉姆",
     "MOVES": [
       "枪之子",
       "银之威光",
