--- a/localization/jpn/AigisMod-Relic-Strings.json
+++ b/localization/jpn/AigisMod-Relic-Strings.json
@@ -347,21 +347,21 @@
     "NAME": "アイギス神殿",
     "FLAVOR": "英雄に対し、人々は1つの大きな神殿を立てた。――そう、女神アイギスを祭る神殿である。",
     "DESCRIPTIONS": [
-      "通常敵とエリート敵のカード報酬に、 #y帝国 と #y復讐者 のカードが提示されるようになる。"
+      "通常敵とエリート敵の報酬に、 #y皇帝 と #y復讐者 のカード選択が追加される。"
     ]
   },
   "aigisMod:AigisShrineEmperor": {
     "NAME": "アイギス神殿",
     "FLAVOR": "英雄に対し、人々は1つの大きな神殿を立てた。――そう、女神アイギスを祭る神殿である。",
     "DESCRIPTIONS": [
-      "通常敵とエリート敵のカード報酬に、 #y王子 と #y復讐者 のカードが提示されるようになる。"
+      "通常敵とエリート敵の報酬に、 #y王子 と #y復讐者 のカード選択が追加される。"
     ]
   },
   "aigisMod:AigisShrineAvenger": {
     "NAME": "アイギス神殿",
     "FLAVOR": "英雄に対し、人々は1つの大きな神殿を立てた。――そう、女神アイギスを祭る神殿である。",
     "DESCRIPTIONS": [
-       "通常敵とエリート敵のカード報酬に、 #y王子 と #y帝国 のカードが提示されるようになる。"
+       "通常敵とエリート敵の報酬に、 #y王子 と #y皇帝 のカード選択が追加される。"
     ]
   }
 }
